<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.yjsoft.tenonvpn.ui.cash.CashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/back" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tenon VPN"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash_flow"
            android:textColor="@color/colorSubTitle"
            android:textSize="40sp" />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/withdrawal_notes"
        android:textColor="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/bg_card"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cash_flow_address"
                        android:textColor="@color/colorPrimary" />


                </LinearLayout>

                <EditText
                    android:id="@+id/cash_account"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/black"
                    android:hint="@string/input_or_pause_address"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="#4C5555" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/cash_tenon_count"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:text=""
                        android:textColor="@color/colorSubTitle" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/cash_tenon_get"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@android:color/black"
                        android:hint="@string/min_number"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="#4C5555" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/extract_all"
                        android:onClick="getAllTenon"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="bottom|right"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/selector_btn"
                    android:gravity="center"
                    android:text="@string/withdrawal"
                    android:onClick="transaction"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

            </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/get_history"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3000dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <de.codecrafters.tableview.TableView
                    xmlns:table="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/tableView"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    table:tableView_headerColor="@color/colorPrimary"
                    table:tableView_columnCount="4" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/ad_cut" />-->

</LinearLayout>